Adds multi-version support to C++ FHIR bundle-to-seqex functionality, and adds R4 APIs.  Makes all tests multiversion for STU3 and R4.
PiperOrigin-RevId: 323591203

--- a/cc/google/fhir/testutil/BUILD
+++ b/cc/google/fhir/testutil/BUILD
@@ -23,9 +23,24 @@ cc_library(
     strip_include_prefix = "//cc/",
     deps = [
         "//cc/google/fhir:primitive_handler",
+        "//cc/google/fhir:type_macros",
         "//cc/google/fhir:util",
         "//cc/google/fhir/r4:primitive_handler",
         "//cc/google/fhir/stu3:primitive_handler",
+        "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
+        "//proto/r4/core/resources:claim_cc_proto",
+        "//proto/r4/core/resources:composition_cc_proto",
+        "//proto/r4/core/resources:condition_cc_proto",
+        "//proto/r4/core/resources:encounter_cc_proto",
+        "//proto/r4/core/resources:medication_administration_cc_proto",
+        "//proto/r4/core/resources:medication_request_cc_proto",
+        "//proto/r4/core/resources:observation_cc_proto",
+        "//proto/r4/core/resources:organization_cc_proto",
+        "//proto/r4/core/resources:parameters_cc_proto",
+        "//proto/r4/core/resources:patient_cc_proto",
+        "//proto/r4/core/resources:procedure_cc_proto",
+        "//proto/r4/core/resources:structure_definition_cc_proto",
+        "//proto/r4/core/resources:value_set_cc_proto",
         "//proto/stu3:resources_cc_proto",
     ],
 )
