--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -275,25 +275,25 @@ cc_library(
     ],
 )
 
-# cc_test(
-#     name = "bundle_to_versioned_resources_converter_test",
-#     srcs = ["bundle_to_versioned_resources_converter_test.cc"],
-#     data = [
-#         "//proto/r4:version_config.textproto",
-#         "//proto/stu3:version_config.textproto",
-#     ],
-#     deps = [
-#         ":bundle_to_versioned_resources_converter",
-#         "//net/proto2/public:proto2",
-#         "//testing/base/public:gunit_main",
-#         "@com_google_absl//absl/strings",
-#         "//cc/google/fhir/seqex:r4",
-#         "//cc/google/fhir/seqex:stu3",
-#         "//cc/google/fhir/testutil:fhir_test_env",
-#         "//cc/google/fhir/testutil:proto_matchers",
-#         "@org_tensorflow//tensorflow/core:lib",
-#     ],
-# )
+cc_test(
+    name = "bundle_to_versioned_resources_converter_test",
+    srcs = ["bundle_to_versioned_resources_converter_test.cc"],
+    data = [
+        "//proto/r4:version_config.textproto",
+        "//proto/stu3:version_config.textproto",
+    ],
+    deps = [
+        ":bundle_to_versioned_resources_converter",
+        "//cc/google/fhir/seqex:r4",
+        "//cc/google/fhir/seqex:stu3",
+        "//cc/google/fhir/testutil:fhir_test_env",
+        "//cc/google/fhir/testutil:proto_matchers",
+        "@com_google_absl//absl/strings",
+        "@com_google_googletest//:gtest_main",
+        "@com_google_protobuf//:protobuf",
+        "@org_tensorflow//tensorflow/core:lib",
+    ],
+)
 
 cc_library(
     name = "primitive_wrapper",
