--- a/cc/google/fhir/seqex/BUILD
+++ b/cc/google/fhir/seqex/BUILD
@@ -14,6 +14,7 @@ cc_library(
         ":resource_to_example",
         "//cc/google/fhir:bundle_to_versioned_resources_converter",
         "//cc/google/fhir:references",
+        "//cc/google/fhir:type_macros",
         "//cc/google/fhir:util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
@@ -32,18 +33,21 @@ cc_test(
     name = "bundle_to_seqex_converter_test",
     srcs = ["bundle_to_seqex_converter_test.cc"],
     data = [
+        "//proto/r4:version_config.textproto",
         "//proto/stu3:version_config.textproto",
     ],
     deps = [
         ":bundle_to_seqex_converter",
         ":converter_types",
         ":example_key",
+        ":r4",
         ":stu3",
         ":text_tokenizer",
-        "//cc/google/fhir/stu3:primitive_handler",
+        "//cc/google/fhir:test_helper",
+        "//cc/google/fhir:type_macros",
+        "//cc/google/fhir/r4:primitive_handler",
+        "//cc/google/fhir/testutil:fhir_test_env",
         "//cc/google/fhir/testutil:proto_matchers",
-        "//proto/stu3:extensions_cc_proto",
-        "//proto/stu3:resources_cc_proto",
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
@@ -61,7 +65,6 @@ cc_library(
         "//cc/google/fhir:extensions",
         "//cc/google/fhir:util",
         "//cc/google/fhir/status:statusor",
-        "//proto/stu3:datatypes_cc_proto",
         "@com_google_protobuf//:protobuf",
     ],
 )
@@ -71,11 +74,11 @@ cc_test(
     srcs = ["bundle_to_seqex_util_test.cc"],
     deps = [
         ":bundle_to_seqex_util",
+        ":r4",
         ":stu3",
+        "//cc/google/fhir/testutil:fhir_test_env",
         "//cc/google/fhir/testutil:proto_matchers",
-        "//proto/stu3:datatypes_cc_proto",
-        "//proto/stu3:extensions_cc_proto",
-        "//proto/stu3:resources_cc_proto",
+        "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
         "@com_google_protobuf//:protobuf",
     ],
@@ -147,9 +150,13 @@ cc_test(
         ":resource_to_example",
         ":text_tokenizer",
         "//cc/google/fhir:test_helper",
-        "//cc/google/fhir/stu3:primitive_handler",
+        "//cc/google/fhir/r4:primitive_handler",
+        "//cc/google/fhir/testutil:fhir_test_env",
         "//cc/google/fhir/testutil:proto_matchers",
-        "//proto/stu3:resources_cc_proto",
+        "//proto/r4/core/resources:binary_cc_proto",
+        "//proto/r4/core/resources:encounter_cc_proto",
+        "//proto/r4/core/resources:observation_cc_proto",
+        "//proto/r4/core/resources:patient_cc_proto",
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/memory",
         "@com_google_googletest//:gtest_main",
@@ -201,5 +208,34 @@ cc_library(
         ":text_tokenizer",
         "//cc/google/fhir/stu3:primitive_handler",
         "//proto/stu3:extensions_cc_proto",
+        "//proto/stu3:resources_cc_proto",
+        "@com_google_absl//absl/status",
+    ],
+)
+
+cc_library(
+    name = "r4",
+    hdrs = ["r4.h"],
+    strip_include_prefix = "//cc/",
+    deps = [
+        ":bundle_to_seqex_converter",
+        ":bundle_to_seqex_util",
+        ":converter_types",
+        ":resource_to_example",
+        ":text_tokenizer",
+        "//cc/google/fhir/r4:primitive_handler",
+        "//proto/r4:google_extensions_cc_proto",
+        "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
+        "//proto/r4/core/resources:claim_cc_proto",
+        "//proto/r4/core/resources:composition_cc_proto",
+        "//proto/r4/core/resources:condition_cc_proto",
+        "//proto/r4/core/resources:encounter_cc_proto",
+        "//proto/r4/core/resources:medication_administration_cc_proto",
+        "//proto/r4/core/resources:medication_cc_proto",
+        "//proto/r4/core/resources:medication_request_cc_proto",
+        "//proto/r4/core/resources:observation_cc_proto",
+        "//proto/r4/core/resources:patient_cc_proto",
+        "//proto/r4/core/resources:procedure_cc_proto",
+        "//proto/r4/core/resources:service_request_cc_proto",
     ],
 )
