--- a/cc/google/fhir/r4/BUILD
+++ b/cc/google/fhir/r4/BUILD
@@ -122,7 +122,9 @@ cc_library(
     srcs = ["primitive_handler.cc"],
     hdrs = ["primitive_handler.h"],
     strip_include_prefix = "//cc/",
-    visibility = ["//cc/google/fhir:internal"],
+    visibility = [
+        "//cc/google/fhir:internal",
+    ],
     deps = [
         "//cc/google/fhir:annotations",
         "//cc/google/fhir:codes",
