Separates "google" extensions into two extension files: google.fhir.$version.fhirproto for extensions that are inherent to the FHIR proto format and do not appear in JSON, and google.fhir.$version.ml for machine-learning related extensions.
In addition to being more descriptive and tighter in scope, these names eliminate the problem vector that occurs from having the token "google" twice in the same namespace

PiperOrigin-RevId: 324271177

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -473,6 +473,7 @@ cc_test(
         "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:extensions_cc_proto",
+        "//proto/stu3:ml_extensions_cc_proto",
         "//proto/stu3:resources_cc_proto",
         "//testdata/r4/profiles:test_cc_proto",
         "//testdata/stu3/profiles:test_cc_proto",
