--- a/cc/google/fhir/r4/BUILD
+++ b/cc/google/fhir/r4/BUILD
@@ -106,7 +106,8 @@ cc_test(
         ":extensions",
         "//cc/google/fhir:test_helper",
         "//cc/google/fhir/testutil:proto_matchers",
-        "//proto/r4:google_extensions_cc_proto",
+        "//proto/r4:fhirproto_extensions_cc_proto",
+        "//proto/r4:ml_extensions_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
         "//proto/r4/core:extensions_cc_proto",
         "//proto/r4/core/resources:composition_cc_proto",
@@ -136,7 +137,7 @@ cc_library(
         "//cc/google/fhir:util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
-        "//proto/r4:google_extensions_cc_proto",
+        "//proto/r4:fhirproto_extensions_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
         "@com_google_absl//absl/memory",
@@ -160,7 +161,7 @@ cc_test(
         "//cc/google/fhir:json_format",
         "//cc/google/fhir:test_helper",
         "//cc/google/fhir/testutil:proto_matchers",
-        "//proto/r4:google_extensions_cc_proto",
+        "//proto/r4:fhirproto_extensions_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
         "//proto/r4/core/resources:binary_cc_proto",
         "//proto/r4/core/resources:observation_cc_proto",
