--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -103,6 +103,8 @@ cc_test(
         "//cc/google/fhir/testutil:proto_matchers",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:extensions_cc_proto",
+        "//proto/stu3:fhirproto_extensions_cc_proto",
+        "//proto/stu3:ml_extensions_cc_proto",
         "//proto/stu3:resources_cc_proto",
         "//testdata/stu3/profiles:test_cc_proto",
         "@com_google_absl//absl/status",
@@ -129,7 +131,7 @@ cc_library(
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//proto/stu3:datatypes_cc_proto",
-        "//proto/stu3:extensions_cc_proto",
+        "//proto/stu3:fhirproto_extensions_cc_proto",
         "//proto/stu3:resources_cc_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/status",
@@ -222,7 +224,7 @@ cc_test(
         "//cc/google/fhir/testutil:proto_matchers",
         "//proto/stu3:codes_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
-        "//proto/stu3:extensions_cc_proto",
+        "//proto/stu3:fhirproto_extensions_cc_proto",
         "//proto/stu3:resources_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
