--- a/go/jsonformat/BUILD
+++ b/go/jsonformat/BUILD
@@ -16,16 +16,16 @@ go_library(
         "unmarshaller.go",
         "version_config.go",
     ],
-    importpath = "google/fhir/jsonformat/jsonformat",
+    importpath = "github.com/google/fhir/go/jsonformat",
     deps = [
-        "//go/google/fhir/jsonformat/internal/accessor",
-        "//go/google/fhir/jsonformat/internal/jsonpbhelper",
+        "//go/jsonformat/internal/accessor",
+        "//go/jsonformat/internal/jsonpbhelper",
         "//proto:annotations_go_proto",
-        "//proto/r4:google_extensions_go_proto",
+        "//proto/r4:fhirproto_extensions_go_proto",
         "//proto/r4/core:datatypes_go_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_go_proto",
         "//proto/stu3:datatypes_go_proto",
-        "//proto/stu3:extensions_go_proto",
+        "//proto/stu3:fhirproto_extensions_go_proto",
         "//proto/stu3:resources_go_proto",
         "@com_bitbucket_creachadair_stringset//:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
@@ -48,13 +48,13 @@ go_test(
     ],
     embed = [":jsonformat"],
     deps = [
-        "//go/google/fhir/jsonformat/internal/accessor",
-        "//go/google/fhir/jsonformat/internal/jsonpbhelper",
+        "//go/jsonformat/internal/accessor",
+        "//go/jsonformat/internal/jsonpbhelper",
         "//proto:annotations_go_proto",
-        "//proto/r4:google_extensions_go_proto",
+        "//proto/r4:fhirproto_extensions_go_proto",
         "//proto/r4/core:datatypes_go_proto",
         "//proto/stu3:datatypes_go_proto",
-        "//proto/stu3:extensions_go_proto",
+        "//proto/stu3:fhirproto_extensions_go_proto",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_google_go_cmp//cmp:go_default_library",
         "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
@@ -71,7 +71,7 @@ go_test(
     ],
     embed = [":jsonformat"],
     deps = [
-        "//go/google/fhir/jsonformat/internal/jsonpbhelper",
+        "//go/jsonformat/internal/jsonpbhelper",
         "//proto/dstu2:codes_go_proto",
         "//proto/dstu2:datatypes_go_proto",
         "//proto/dstu2:metadatatypes_go_proto",
