--- a/spec/google/BUILD
+++ b/spec/google/BUILD
@@ -9,7 +9,7 @@ package(default_visibility = ["//visibility:public"])
 gen_fhir_definitions_and_protos(
     name = "stu3",
     extensions = [
-        "google_extensions.prototxt",
+        "fhirproto_extensions.prototxt",
     ],
     package_info = "google_stu3_package_info.prototxt",
     separate_extensions = True,
@@ -18,7 +18,7 @@ gen_fhir_definitions_and_protos(
 gen_fhir_definitions_and_protos(
     name = "r4",
     extensions = [
-        "google_extensions.prototxt",
+        "fhirproto_extensions.prototxt",
     ],
     package_info = "google_r4_package_info.prototxt",
     separate_extensions = True,
