--- a/cc/google/fhir/seqex/BUILD
+++ b/cc/google/fhir/seqex/BUILD
@@ -207,7 +207,8 @@ cc_library(
         ":resource_to_example",
         ":text_tokenizer",
         "//cc/google/fhir/stu3:primitive_handler",
-        "//proto/stu3:extensions_cc_proto",
+        "//proto/stu3:fhirproto_extensions_cc_proto",
+        "//proto/stu3:ml_extensions_cc_proto",
         "//proto/stu3:resources_cc_proto",
         "@com_google_absl//absl/status",
     ],
@@ -224,7 +225,7 @@ cc_library(
         ":resource_to_example",
         ":text_tokenizer",
         "//cc/google/fhir/r4:primitive_handler",
-        "//proto/r4:google_extensions_cc_proto",
+        "//proto/r4:ml_extensions_cc_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
         "//proto/r4/core/resources:claim_cc_proto",
         "//proto/r4/core/resources:composition_cc_proto",
