--- a/java/BUILD
+++ b/java/BUILD
@@ -11,7 +11,7 @@ java_library(
     deps = [
         ":common",
         "//proto:annotations_java_proto",
-        "//proto/r4:google_extensions_java_proto",
+        "//proto/r4:fhirproto_extensions_java_proto",
         "//proto/r4/core:datatypes_java_proto",
         "//proto/stu3:datatypes_java_proto",
         "@com_google_protobuf//:protobuf_java",
@@ -189,10 +189,10 @@ java_library(
         ":proto_gen_transformer",
         ":resource_utils",
         "//proto:annotations_java_proto",
+        "//proto/r4:fhirproto_extensions_java_proto",
         "//proto/r4/core:datatypes_java_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_java_proto",
         "//proto/stu3:datatypes_java_proto",
-        "//proto/stu3:extensions_java_proto",
         "//proto/stu3:resources_java_proto",
         "@com_google_protobuf//:protobuf_java",
         "@maven//:com_google_code_gson_gson",
@@ -369,7 +369,8 @@ java_test(
     deps = [
         ":primitive_wrappers",
         "//proto/r4/core:datatypes_java_proto",
-        "//proto/stu3:extensions_java_proto",
+        "//proto/stu3:fhirproto_extensions_java_proto",
+        "//proto/stu3:ml_extensions_java_proto",
         "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@maven//:com_google_guava_guava",
@@ -712,7 +713,7 @@ java_test(
         ":validation_test_base",
         "//proto/stu3:codes_java_proto",
         "//proto/stu3:datatypes_java_proto",
-        "//proto/stu3:extensions_java_proto",
+        "//proto/stu3:fhirproto_extensions_java_proto",
         "//proto/stu3:uscore_java_proto",
         "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
@@ -731,7 +732,7 @@ java_test(
     deps = [
         ":json_format",
         ":validation_test_base",
-        "//proto/r4:google_extensions_java_proto",
+        "//proto/r4:fhirproto_extensions_java_proto",
         "//proto/r4:uscore_java_proto",
         "//proto/r4/core:datatypes_java_proto",
         "@bazel_tools//tools/java/runfiles",
