--- a/py/google/fhir/seqex/BUILD
+++ b/py/google/fhir/seqex/BUILD
@@ -30,11 +30,12 @@ pyx_library(
     ],
     srcs_version = "PY3ONLY",
     deps = [
-        "//cc/google/fhir/seqex:stu3",
+        "//cc/google/fhir/seqex:r4",
         "//cc/google/fhir/seqex:text_tokenizer",
         "//proto:version_config_cc_proto",
-        "//proto/stu3:ml_extensions_cc_proto",
-        "//proto/stu3:resources_cc_proto",
+        "//proto/r4:ml_extensions_cc_proto",
+        "//proto/r4/core:extensions_cc_proto",
+        "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
         "@org_tensorflow//tensorflow/core:protos_all_cc",
     ],
 )
@@ -43,14 +44,14 @@ py_test(
     name = "bundle_to_seqex_converter_test",
     srcs = ["bundle_to_seqex_converter_test.py"],
     data = [
-        "//proto/stu3:version_config.textproto",
+        "//proto/r4:version_config.textproto",
     ],
     python_version = "PY3",
     deps = [
         ":bundle_seqex_converter",
         "//proto:version_config_py_pb2",
-        "//proto/stu3:ml_extensions_py_pb2",
-        "//proto/stu3:resources_py_pb2",
+        "//proto/r4:ml_extensions_py_pb2",
+        "//proto/r4/core/resources:bundle_and_contained_resource_py_pb2",
         "//py/google/fhir/testutil:protobuf_compare",
         "@absl_py//absl/flags",
         "@absl_py//absl/testing:absltest",
@@ -66,13 +67,13 @@ pyx_library(
         "bundle_to_seqex_util.pyx",
     ],
     py_deps = [
-        "//proto/stu3:ml_extensions_py_pb2",
+        "//proto/r4:ml_extensions_py_pb2",
     ],
     srcs_version = "PY3ONLY",
     deps = [
-        "//cc/google/fhir/seqex:stu3",
-        "//proto/stu3:ml_extensions_cc_proto",
-        "//proto/stu3:resources_cc_proto",
+        "//cc/google/fhir/seqex:r4",
+        "//proto/r4:ml_extensions_cc_proto",
+        "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
     ],
 )
 
@@ -82,8 +83,8 @@ py_test(
     python_version = "PY3",
     deps = [
         ":bundle_to_seqex_util",
-        "//proto/stu3:ml_extensions_py_pb2",
-        "//proto/stu3:resources_py_pb2",
+        "//proto/r4:ml_extensions_py_pb2",
+        "//proto/r4/core/resources:bundle_and_contained_resource_py_pb2",
         "//py/google/fhir/testutil:protobuf_compare",
         "@absl_py//absl/testing:absltest",
         "@com_google_protobuf//:protobuf_python",
@@ -97,11 +98,11 @@ py_library(
     ],
     srcs_version = "PY3",
     deps = [
+        "//proto/r4/core/resources:bundle_and_contained_resource_py_pb2",
+        "//proto/r4/core/resources:patient_py_pb2",
         ":bundle_seqex_converter",
         ":bundle_to_seqex_util",
-        "//proto/stu3:ml_extensions_py_pb2",
-        "//proto/stu3:resources_py_pb2",
-        "//py/google/fhir/stu3:util",
+        "//proto/r4:ml_extensions_py_pb2",
         "@org_tensorflow//tensorflow/core:protos_all_py",
         requirement("apache_beam"),
     ],
@@ -113,15 +114,15 @@ py_test(
         "bundle_to_seqex_test.py",
     ],
     data = [
-        "//proto/stu3:version_config.textproto",
+        "//proto/r4:version_config.textproto",
     ],
     python_version = "PY3",
     deps = [
         ":bundle_to_seqex",
         ":bundle_seqex_converter",
         "@com_google_protobuf//:protobuf_python",
-        "//proto/stu3:ml_extensions_py_pb2",
-        "//proto/stu3:resources_py_pb2",
+        "//proto/r4/core/resources:bundle_and_contained_resource_py_pb2",
+        "//proto/r4:ml_extensions_py_pb2",
         "//proto:version_config_py_pb2",
         "//py/google/fhir/testutil:protobuf_compare",
         "@absl_py//absl/testing:absltest",
@@ -142,8 +143,8 @@ py_binary(
     deps = [
         ":bundle_to_seqex",
         "@com_google_protobuf//:protobuf_python",
-        "//proto/stu3:ml_extensions_py_pb2",
-        "//proto/stu3:resources_py_pb2",
+        "//proto/r4/core/resources:bundle_and_contained_resource_py_pb2",
+        "//proto/r4:ml_extensions_py_pb2",
         "//proto:version_config_py_pb2",
         "@absl_py//absl:app",
         "@absl_py//absl/flags",
