Extracts Machine-learning oriented python, C++, and supporting code from github.com/google/fhir/ to github.com/google/fhir-ml.
PiperOrigin-RevId: 326467270

--- a/testdata/stu3/BUILD
+++ b/testdata/stu3/BUILD
@@ -1,4 +1,4 @@
-# Testdata for the parsers
+# STU3 Testdata
 
 package(default_visibility = ["//visibility:public"])
 
@@ -52,20 +52,6 @@ filegroup(
     name = "validation",
     srcs = glob([
         "validation/*",
-    ]),
-)
-
-filegroup(
-    name = "labels",
-    srcs = glob([
-        "labels/*",
-    ]),
-)
-
-filegroup(
-    name = "tensorflow",
-    srcs = glob([
-        "tensorflow/*",
     ]),
 )
 
