--- a/cc/google/fhir/status/BUILD
+++ b/cc/google/fhir/status/BUILD
@@ -13,27 +13,13 @@ cc_library(
 
 cc_library(
     name = "statusor",
-    srcs = ["statusor.cc"],
     hdrs = [
         "statusor.h",
-        "statusor_internals.h",
     ],
     strip_include_prefix = "//cc/",
     deps = [
         ":status",
         "@com_google_absl//absl/status",
-        "@org_tensorflow//tensorflow/core:lib",
-    ],
-)
-
-cc_test(
-    name = "statusor_test",
-    size = "small",
-    srcs = ["statusor_test.cc"],
-    deps = [
-        ":statusor",
-        "@com_google_absl//absl/memory",
-        "@com_google_absl//absl/status",
-        "@com_google_googletest//:gtest_main",
+        "@com_google_absl//absl/status:statusor",
     ],
 )
