Remove google::fhir::Status in favor of absl::Status and transition references of google::fhir::StatusOr to absl::StatusOr.
PiperOrigin-RevId: 331039845

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -23,6 +23,7 @@ cc_library(
         "//cc/google/fhir/status:statusor",
         "//proto:annotations_cc_proto",
         "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
         "@com_google_protobuf//:protobuf",
@@ -276,6 +277,7 @@ cc_library(
         "//proto:annotations_cc_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/time",
         "@com_google_protobuf//:protobuf",
@@ -314,6 +316,7 @@ cc_library(
         "//proto:annotations_cc_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/time",
