Remove unused type aliases and clean up formatting.
PiperOrigin-RevId: 331189417

--- a/py/google/fhir/testing/BUILD
+++ b/py/google/fhir/testing/BUILD
@@ -14,18 +14,12 @@ py_library(
     name = "protobuf_compare",
     srcs = ["protobuf_compare.py"],
     srcs_version = "PY3",
-    deps = [
-        "@absl_py//absl/testing:absltest",
-        "@com_google_protobuf//:protobuf_python",
-    ],
+    deps = ["@com_google_protobuf//:protobuf_python"],
 )
 
 py_library(
     name = "testdata_utils",
     srcs = ["testdata_utils.py"],
     srcs_version = "PY3",
-    deps = [
-        "@absl_py//absl/flags",
-        "@com_google_protobuf//:protobuf_python",
-    ],
+    deps = ["@com_google_protobuf//:protobuf_python"],
 )
