--- a/py/google/fhir/testing/BUILD
+++ b/py/google/fhir/testing/BUILD
@@ -2,6 +2,7 @@ load(
     "@rules_python//python:python.bzl",
     "py_library",
 )
+load("@fhir_bazel_pip_dependencies//:requirements.bzl", "requirement")
 
 package(
     default_testonly = 1,
@@ -14,12 +15,20 @@ py_library(
     name = "protobuf_compare",
     srcs = ["protobuf_compare.py"],
     srcs_version = "PY3",
-    deps = ["@com_google_protobuf//:protobuf_python"],
+    deps = [
+        "@com_google_protobuf//:protobuf_python",
+        requirement("absl-py"),
+        requirement("six"),
+    ],
 )
 
 py_library(
     name = "testdata_utils",
     srcs = ["testdata_utils.py"],
     srcs_version = "PY3",
-    deps = ["@com_google_protobuf//:protobuf_python"],
+    deps = [
+        "@com_google_protobuf//:protobuf_python",
+        requirement("absl-py"),
+        requirement("six"),
+    ],
 )
