--- a/py/google/fhir/testing/BUILD
+++ b/py/google/fhir/testing/BUILD
@@ -13,7 +13,10 @@ licenses(["notice"])
 
 py_library(
     name = "protobuf_compare",
-    srcs = ["protobuf_compare.py"],
+    srcs = [
+        "__init__.py",
+        "protobuf_compare.py",
+    ],
     srcs_version = "PY3",
     deps = [
         "@com_google_protobuf//:protobuf_python",
@@ -24,7 +27,10 @@ py_library(
 
 py_library(
     name = "testdata_utils",
-    srcs = ["testdata_utils.py"],
+    srcs = [
+        "__init__.py",
+        "testdata_utils.py",
+    ],
     srcs_version = "PY3",
     deps = [
         "@com_google_protobuf//:protobuf_python",
