--- a/examples/bulkdata/BUILD
+++ b/examples/bulkdata/BUILD
@@ -17,5 +17,6 @@ licenses(["notice"])
 py_binary(
     name = "bulkload",
     srcs = ["bulkload.py"],
+    legacy_create_init = 0,
     python_version = "PY3",
 )
