Adds py.typed file for google-fhir package per PEP0561.
See more at: https://www.python.org/dev/peps/pep-0561/#packaging-type-information.

PiperOrigin-RevId: 336707803

--- a/py/MANIFEST.in
+++ b/py/MANIFEST.in
@@ -1,4 +1,5 @@
 # Files needed when creating sdist or bdist_wheel distributions.
 include requirements.txt
 include README.md
+include google/fhir/py.typed
 global-exclude *_test.py
