Leverages backports.zoneinfo for IANA-bazed timezone arithmetic.
Previously, `_primitive_time_utils.py` leveraged `dateutil` for datetime
timezone arithmetic. However, `dateutil` is unable to properly account for dst
offsets when performing datetime arithemtic for dates in the distant future.
This is a known `dateutil` bug and more info can be found at:
* https://github.com/dateutil/dateutil/issues/462
* https://github.com/dateutil/dateutil/issues/590

This is addressed with PEP615 (https://www.python.org/dev/peps/pep-0615/) for
interpreters >=3.9. `backports.zoneinfo` provides backwards compatibility API
for interpreters >=3.6, <3.9 which we leverage here.

PiperOrigin-RevId: 336909567

--- a/py/google/fhir/BUILD
+++ b/py/google/fhir/BUILD
@@ -24,6 +24,7 @@ py_library(
         "@com_google_protobuf//:protobuf_python",
         "//py",
         "//py/google/fhir/utils:proto_utils",
+        requirement("backports.zoneinfo"),
         requirement("python-dateutil"),
         requirement("six"),
     ],
