--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -16,6 +16,7 @@ cc_library(
         "//proto/google/fhir/proto/stu3:datatypes_cc_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/types:optional",
         "@com_google_protobuf//:protobuf",
@@ -51,6 +52,7 @@ cc_library(
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
         "@com_google_protobuf//:protobuf",
     ],
 )
@@ -74,6 +76,7 @@ cc_test(
         "//proto/google/fhir/proto/stu3:resources_cc_proto",
         "//proto/google/fhir/proto/stu3:uscore_cc_proto",
         "//testdata/stu3/profiles:test_cc_proto",
+        "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
     ],
@@ -108,6 +111,7 @@ cc_test(
         "//proto/google/fhir/proto/stu3:resources_cc_proto",
         "//testdata/stu3/profiles:test_cc_proto",
         "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
     ],
@@ -150,6 +154,7 @@ cc_library(
     deps = [
         ":primitive_handler",
         "//cc/google/fhir:json_format",
+        "@com_google_absl//absl/status:statusor",
     ],
 )
 
@@ -171,6 +176,7 @@ cc_test(
         "//proto/google/fhir/proto/stu3:datatypes_cc_proto",
         "//proto/google/fhir/proto/stu3:resources_cc_proto",
         "//testdata/stu3/profiles:test_cc_proto",
+        "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
         "@com_google_protobuf//:protobuf",
@@ -226,6 +232,7 @@ cc_test(
         "//proto/google/fhir/proto/stu3:datatypes_cc_proto",
         "//proto/google/fhir/proto/stu3:fhirproto_extensions_cc_proto",
         "//proto/google/fhir/proto/stu3:resources_cc_proto",
+        "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
         "@com_google_protobuf//:protobuf",
