Fixes invalid attr access and ReferenceId field printing for Analytic FHIR JSON.
In addition to these bug fixes, this change modifies the existing JsonFormatTest
base class to provide more generic utility to different versions of FHIR.

PiperOrigin-RevId: 337146364

--- a/py/google/fhir/stu3/BUILD
+++ b/py/google/fhir/stu3/BUILD
@@ -117,6 +117,7 @@ py_test(
     ],
     data = [
         "//spec:stu3",
+        "//testdata/stu3:bigquery",
         "//testdata/stu3:examples",
         "//testdata/stu3:validation",
     ],
