Creates .pyi annotation stubs for generated protos.
PiperOrigin-RevId: 337865828

--- a/py/MANIFEST.in
+++ b/py/MANIFEST.in
@@ -2,4 +2,5 @@
 include requirements.txt
 include README.md
 include google/fhir/py.typed
+recursive-include proto/google/fhir/proto *.pyi
 global-exclude *_test.py
