Add basic parse/print tests around ContainedResource.
PiperOrigin-RevId: 338137607

--- a/py/google/fhir/r4/BUILD
+++ b/py/google/fhir/r4/BUILD
@@ -217,6 +217,7 @@ py_test(
         "//py/google/fhir/json_format:json_format_test",
         "//py/google/fhir/r4:json_format",
         "//py/google/fhir/testing:testdata_utils",
+        "//py/google/fhir/utils:proto_utils",
         requirement("absl-py"),
         requirement("six"),
     ],
