--- a/py/MANIFEST.in
+++ b/py/MANIFEST.in
@@ -2,5 +2,6 @@
 include requirements.txt
 include README.md
 include google/fhir/py.typed
+include proto/google/fhir/proto/py.typed
 recursive-include proto/google/fhir/proto *.pyi
 global-exclude *_test.py
